<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="layoutBinder"
            type="com.bigtime.ui.login.ResetPasswordFragment" />

        <variable
            name="isLoading"
            type="boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/widget_progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:showLoading="@{isLoading}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_1"
            style="@style/Text.Title.Medium.AppTextBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_2"
            style="@style/Text.SubTitle.Light.AppTextBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_new_password"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_1"
            app:layout_constraintStart_toStartOf="@+id/tv_title_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/EditTextHint.Medium.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:errorTextAppearance="@style/EditTextError.Medium.Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                style="@style/EditText.Medium.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!isLoading}"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/divider" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/EditTextHint.Medium.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:errorTextAppearance="@style/EditTextError.Medium.Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_confirm_password"
                style="@style/EditText.Medium.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!isLoading}"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/divider" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            style="@style/Text.Button.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{!isLoading}"
            android:text="@string/save"
            android:theme="@style/Button.AppGreen"
            app:layout_constraintEnd_toEndOf="@+id/til_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/til_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/til_confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
