<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginTop="@dimen/normal_padding"
            android:layout_height="wrap_content"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_1"
            style="@style/Text.Title.Medium.AppTextBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />





        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_padding"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:paddingBottom="@dimen/normal_padding"
            android:paddingTop="@dimen/normal_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_1"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/main_padding"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_mobile"
                    android:fontFamily="@font/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/seperator"
                    android:layout_marginTop="@dimen/main_padding"
                    android:textColor="@color/activeText"
                    android:textAppearance="@style/Text.Medium.Regular"
                    android:text="@string/mobile_number" />



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_phone"
                    style="@style/EditText.Medium.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_below="@+id/tv_mobile"
                    android:padding="@dimen/normal_padding"
                    android:gravity="center_vertical"
                    android:hint="Enter your mobile number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/curverd_gray"
                    android:textColorHint="@color/divider"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_password"
                    android:fontFamily="@font/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/activeText"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:layout_marginBottom="@dimen/seperator"
                    android:layout_below="@+id/tiet_phone"
                    android:textAppearance="@style/Text.Medium.Regular"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password"
                    style="@style/EditText.Medium.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:padding="@dimen/normal_padding"
                    android:hint="Enter your password"
                    android:background="@drawable/curverd_gray"
                    android:textColorHint="@color/divider"
                    android:inputType="textPassword" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_forgot_password"
                    style="@style/Text.Small.Light.AppTextBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/normal_padding"
                    android:text="@string/forgot_password"
                    android:layout_below="@+id/tiet_password"
                    android:fontFamily="@font/medium"
                    android:layout_alignRight="@+id/tiet_password"
                    android:textColor="@color/colorAccent"/>

                <com.bigtime.widget.LoadingButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!isLoading}"
                    app:lb_btnColor="@color/colorAccent"
                    android:layout_below="@+id/tv_forgot_password"
                    app:lb_btnRippleColor="@color/colorPrimary"
                    app:lb_btnText="@string/login"
                    android:layout_marginBottom="@dimen/main_padding"
                    android:layout_marginTop="@dimen/main_padding"
                    app:lb_resetAfterFailed="true"
                    app:lb_textColor="@color/white"
                    app:lb_textStyle="normal" />






                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_phone"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/EditTextError.Medium.Light">

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/divider"
                        app:layout_constraintBottom_toTopOf="@+id/tv_phone_error"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ccp_phone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_phone_hint"
                        style="@style/EditTextHint.Medium.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_mobile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_phone_error"
                        style="@style/EditTextHint.Medium.Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@android:color/holo_red_light"
                        android:visibility="gone"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />



                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:enabled="@{!isLoading}"
                        android:paddingStart="-8dp"
                        android:paddingTop="7dp"
                        android:paddingEnd="0dp"
                        app:ccpDialog_keyboardAutoPopup="false"
                        app:ccpDialog_showCloseIcon="true"
                        app:ccpDialog_textColor="@color/primaryText"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_contentColor="@color/primaryText"
                        app:ccp_defaultNameCode="US"
                        app:ccp_hintExampleNumber="true"
                        app:ccp_showArrow="false"
                        app:ccp_showFlag="false"
                        app:ccp_showNameCode="false"
                        app:layout_constraintBottom_toTopOf="@+id/view"
                        app:layout_constraintEnd_toStartOf="@+id/tiet_phone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_phone_hint" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/EditTextHint.Medium.Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="@dimen/normal_padding"
                        android:layout_marginEnd="32dp"
                        app:errorTextAppearance="@style/EditTextError.Medium.Light"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cl_phone"
                        app:passwordToggleEnabled="true">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/divider" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_passwordd"
                            style="@style/EditText.Medium.Regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>



            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="layoutBinder"
            type="com.bigtime.ui.login.LoginFragment" />

        <variable
            name="isLoading"
            type="boolean" />

    </data>

</layout>