<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="layoutBinder"
            type="com.bigtime.ui.login.VerifyPhoneFragment" />

        <variable
            name="isLoading"
            type="boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/widget_light_progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:showLoading="@{isLoading}" />


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".65"
            android:layout_marginLeft="@dimen/main_padding"
            android:layout_marginRight="@dimen/main_padding"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:paddingBottom="@dimen/normal_padding"
            android:paddingTop="@dimen/normal_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:padding="@dimen/main_padding"
            android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_1"
            style="@style/Text.Title.Medium.AppTextBlue"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/normal_padding"
            android:layout_marginLeft="@dimen/normal_padding"
            android:paddingTop="@dimen/normal_padding"
            android:paddingBottom="@dimen/main_padding"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="Verification Code" />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_2"
                style="@style/Text.SubTitle.Light.AppTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:layout_centerHorizontal="true"
                android:text="We have sent an OTP on your mobile no."
                android:layout_below="@+id/tv_title_1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                style="@style/Text.SubTitle.Regular.AppTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/we_sent_to_you"
                android:paddingBottom="@dimen/normal_padding"
                android:layout_below="@+id/tv_title_2"/>

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{!isLoading}"
                android:fontFamily="@font/normal"
                android:layout_below="@+id/tv_phone"
                android:layout_centerHorizontal="true"
                android:inputType="number"
                android:textAppearance="@style/Text.SubTitle.Regular.AppTextBlue"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondary_text"
                android:cursorVisible="false"
                app:itemCount="4"
                android:layout_marginTop="@dimen/main_padding"
                app:itemHeight="48dp"
                app:itemSpacing="16dp"
                app:itemWidth="48dp"
                android:itemBackground="@drawable/curverd_gray"
                app:lineColor="@color/transparent"
                app:lineWidth="1dp"
                app:viewType="line" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                style="@style/Text.Button.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!isLoading}"
                android:layout_below="@+id/btn_resend_otp"
                android:text="Verify OTP"
                android:layout_marginRight="@dimen/normal_padding"
                android:layout_marginLeft="@dimen/normal_padding"
                android:layout_marginBottom="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:theme="@style/Button.AppGreen" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_resend_otp"
                style="@style/Text.SubTitle.Regular.AppGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{!isLoading}"
                android:layout_below="@+id/pinView"
                android:gravity="center"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"
                android:text="@string/resend_otp"
                android:theme="@style/BorderlessButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change_number"
                style="@style/Text.SubTitle.Regular.AppTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{!isLoading}"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/pinView"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="@string/change_number"
                android:theme="@style/BorderlessButton"/>



        </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:padding="@dimen/main_padding"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:scaleType="centerInside"
            android:elevation="5dp"
            android:background="@drawable/border_green_white_circle"
            android:src="@drawable/logo_verification"/>






    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
